--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
         
         // 正常图片URL数组
         const normalImages = [
-            "https://images.unsplash.com/photo-1505142468610-359e7d316be0?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80", 
-            "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80", 
-            "https://images.unsplash.com/photo-1475924156734-496f6cac6ec1?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"  
+            "1.jpg", 
+            "2.jpg", 
+            "3.jpg"  
         ];
         
         // 惊吓素材URL - 请替换为您自己的素材
